[317]: More cleanup